feat(mailbox): input
