# backend/src/swagger/user.schema.js
@@ -1,0 +1,20 @@
+/**
+ * @swagger
+ * components:
+ *   schemas:
+ *     User:
+ *       type: object
+ *       properties:
+ *         id:
+ *           type: integer
+ *           description: Unique identifier for the User.
+ *           example: 3
+ *         username:
+ *           type: string
+ *           description: User name
+ *           example: lytt925
+ *         profile_content:
+ *           type: string
+ *           description: User profile content
+ *           example: I am a grad student.
+ */ 
